quit feature established

--- a/index.html
+++ b/index.html
@@ -10,6 +10,17 @@
 
 </head>
 
+<h1>Todo List</h1>
+
+<p>
+<ul>
+    <li>"new" - Add a Todo</li>
+    <li>"list" - List All Todos</li>
+    <li>"delete" - Remove a Specific Todo</li>
+    <li>"quit" - Quit App</li>
+</ul>
+
+</p>
 
 
 
